Move samhandlerFnr to header
